=======
Changes
=======

0.4.1 (unreleased)
==================

    - 


0.4.0 (2008-12-11)
==================

    - Removed zope.app.form dependency. Changed ITerms import from
      zope.app.form.browser.interfaces to
      zope.browser.interfaces. [projekt01]


0.3.5 (2008-12-08)
==================

    - Fixed bug in __new__ of contexual factories that would disallow
      subclasses to use constructors that expect a different
      signature. [icemac]


0.3.4 (2008-08-27)
==================

    - Added all documents in package to long description, so they are
      readable in pypi. [icemac]

0.3.3 (2008-06-10)
==================

    - Fixed bug in __new__ of factories that would disallow subclasses to use
      constructors that expect a different signature. (Thanks to Sebastian
      Wehrmann for the patch.)

0.3.2 (2008-04-09)
==================

    - Fixed scalability bug caused by missing __nonzero__ on ValueMappingSource


0.3.1 (2008-02-12)
==================

    - Fixed scalability bug caused by missing __nonzero__ on BasicSourceFactory


0.3.0 (??????????)
==================

    - Added class-level defaults for attributes that are declared in the
      interfaces to not have the Zope 2 security machinery complain about
      them.


0.2.1 (2007-07-10)
==================

    - Fixed a bug in the contextual token policy that was handling the
      resolution of values for a given token incorrectly.


0.2.0 (2007-07-10)
==================

    - Added a contextual token policy interface that allows getToken and
      getValue to access the cotext for contextual sources.

    - Added a contextual term policy interface that allows createTerm and
      getTitle to access the context for contextual sources.

    - Added compatibility for Zope 3.2 and Zope 2.9 (via Five 1.3)