@@ -5,7 +5,8 @@ Changes
 0.4.1 (unreleased)
 ==================
 
-    - 
+    - FactoredContextualSourceBinder.__call__ now accepts arguments giving the
+      class of source to make, and args to pass to source class.
 
 
 0.4.0 (2008-12-11)
